fix hero button hover on mobile screen

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -52,7 +52,9 @@
     );
 
     @include respond(phone) {
-      background-image: none;
+      background-image: 135deg,
+      $primary-color 0%,
+      $secondary-color 100%;
     }
   }
 
@@ -61,7 +63,7 @@
     text-decoration: none;
 
     @include respond(phone) {
-      -webkit-text-fill-color: $secondary-color;
+      -webkit-text-fill-color: $white-color;
     }
 
     &::after {
